--- a/css/styles.css
+++ b/css/styles.css
@@ -1526,4 +1526,258 @@ box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px
     pointer-events: none;
   }
 
+  /* Form */
 
+.lebel-description {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: calc(23 / 20) ;
+    text-align: center;
+    letter-spacing: 0.03em;
+
+    color: var(--description-text-color);
+    padding-top: 40px;
+    margin-bottom: 12px;
+}
+
+
+.wapper-form {
+    display: block;
+}
+
+.form {
+    display: grid;
+    justify-content: center;
+}
+
+
+.label {
+    margin-bottom: 10px;
+    margin-right: 40px;
+    margin-left: 40px;
+}
+
+
+
+.label-text {
+    font-size: 12px;
+    line-height: 14px;
+
+    letter-spacing: 0.01em;
+
+    color: var(--link-text-color);
+
+    margin-bottom: 4px;
+}
+
+
+.input {
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    width: 100%;
+    height: 40px;
+    padding-left: 42px;
+    transition: outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+}
+
+
+.input:focus {
+    outline: 1px solid #2196F3;
+    border-radius: 4px;
+    border: none;
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+.input .icon-label:focus {
+    fill: var(--hover-focus-color);
+}
+
+
+
+.comment-text {
+    font-size: 12px;
+    line-height: calc(14 / 12);
+    letter-spacing: 0.01em;
+
+    color: rgba(117, 117, 117, 0.5);
+    width: 448px;
+    height: 120px;
+    padding: 12px 16px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    resize: none;
+}
+
+
+.comment-text:focus {
+    outline: 1px solid var(--hover-focus-color);
+    border: none;
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+
+.label-text-checkbox {
+font-size: 14px;
+line-height: calc(24 / 14);
+
+letter-spacing: 0.03em;
+color: var(--link-text-color);
+}
+
+
+
+.label-link {
+    font-size: 14px;
+    line-height: calc(24 / 14);
+
+    letter-spacing: 0.03em; 
+    color: var(--hover-focus-color);
+}
+
+
+
+.icon-label {
+    /* fill: var(--description-text-color); */
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 13px;
+}
+
+
+.wapper-icon-label {
+    position: relative;
+}
+
+
+.icon-label:checked {
+    fill: var(--hover-focus-color);
+}
+
+
+
+.agreement-checkbox {
+    appearance: none;
+    width: 16px;
+    height: 15px;
+    border: 2px solid var(--description-text-color);
+    border-radius: 1px;
+    margin-right: 8px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) , border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+.label-text-icon {
+
+}
+
+
+
+
+.label-text-agermeent {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 30px;
+}
+
+
+.agreement-checkbox:checked {
+    background-image: url("data:image/svg+xml, background-image: url('data:image/svg+xml,%253Csvg width='13' height='10' viewBox='0 0 13 10' fill='%2523FFFFFF' xmlns='http://www.w3.org/2000/svg'%253E%253Cpath d='M1.95703 4.75166L1.88825 4.68604L1.81923 4.75141L0.93123 5.59258L0.854858 5.66492L0.930974 5.73753L4.42671 9.07236L4.49574 9.1382L4.56476 9.07236L12.069 1.91352L12.1449 1.84116L12.069 1.76881L11.1873 0.927644L11.1183 0.861826L11.0493 0.927611L4.49577 7.17353L1.95703 4.75166Z' fill='white' stroke='white' stroke-width='0.2'/%253E%253C/svg%253E%250A'); ");    background-position: center;
+    background-repeat: no-repeat;
+    background: var(--hover-focus-color);
+    background-size: 11px 8px;
+    border: transparent;
+}
+
+
+.label-comment {
+    margin-bottom: 20px;
+    margin-right: 40px;
+    margin-left: 40px;
+}
+
+
+.form-btn {
+    width: 200px;
+    height: 50px;
+    padding: 10px 52px;
+    border-radius: 4px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    background-color: var(--hover-focus-color);
+    border: transparent;
+    color: var(--primary-backgraund-color);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-btn:hover, .form-btn:focus {
+    background-color: var(--button--color);
+}
+
+.wapper-btn-form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.section-form {
+    margin-left: auto;
+}
+
+
+.footer-form-btn {
+    width: 200px;
+    height: 50px;
+    background-color: var(--hover-focus-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border-color: transparent;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--primary-backgraund-color);
+    text-align: center;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: calc(30 / 16);
+}
+
+
+
+.section-form-icon {
+    margin-left: 10px;
+}
+
+
+.section-input-wripper {
+    display: flex;
+    gap: 12px;
+}
+
+
+.section-input {
+    background-color: transparent;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 4px;
+    padding-left: 15px;
+    color: var(--primary-backgraund-color);
+    border-color: rgba(255, 255, 255, 0.3);
+    width: 358px;
+    height: 50px;
+}
+
+
+.text-mail {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: calc(16 / 14);
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--primary-backgraund-color);
+    margin-bottom: 20px;
+}
