--- a/css/styles.css
+++ b/css/styles.css
@@ -1590,7 +1590,7 @@ box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px
 }
 
 
-.input .icon-label:focus {
+.input:focus + .icon-label{
     fill: var(--hover-focus-color);
 }
 
@@ -1654,9 +1654,7 @@ color: var(--link-text-color);
 }
 
 
-.icon-label:checked {
-    fill: var(--hover-focus-color);
-}
+
 
 
 
@@ -1672,10 +1670,19 @@ color: var(--link-text-color);
 
 
 .label-text-icon {
-
+    position: absolute;
+    bottom: 4px;
+    left: 1px;
+    top: 2px;
+    right: 4px;
+    fill: white;
+    opacity: 0;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-
+.agreement-checkbox:focus + .label-text-icon {
+    opacity: 1;
+}
 
 
 .label-text-agermeent {
@@ -1687,11 +1694,15 @@ color: var(--link-text-color);
 
 
 .agreement-checkbox:checked {
-    background-image: url("data:image/svg+xml, background-image: url('data:image/svg+xml,%253Csvg width='13' height='10' viewBox='0 0 13 10' fill='%2523FFFFFF' xmlns='http://www.w3.org/2000/svg'%253E%253Cpath d='M1.95703 4.75166L1.88825 4.68604L1.81923 4.75141L0.93123 5.59258L0.854858 5.66492L0.930974 5.73753L4.42671 9.07236L4.49574 9.1382L4.56476 9.07236L12.069 1.91352L12.1449 1.84116L12.069 1.76881L11.1873 0.927644L11.1183 0.861826L11.0493 0.927611L4.49577 7.17353L1.95703 4.75166Z' fill='white' stroke='white' stroke-width='0.2'/%253E%253C/svg%253E%250A'); ");    background-position: center;
     background-repeat: no-repeat;
     background: var(--hover-focus-color);
     background-size: 11px 8px;
     border: transparent;
+}
+
+
+.ffwwf {
+    position: relative;
 }
 
 
