--- a/css/styles.css
+++ b/css/styles.css
@@ -1504,6 +1504,13 @@ box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px
 }
 
 
+
+.modal-btn:hover .modal-icon-close {
+    fill: var(--hover-focus-color);
+}
+
+
+
 .modal-icon-close {
     fill: currentColor;
 }
@@ -1601,8 +1608,7 @@ box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px
     font-size: 12px;
     line-height: calc(14 / 12);
     letter-spacing: 0.01em;
-
-    color: rgba(117, 117, 117, 0.5);
+    color: var(--logo-text-color);
     width: 448px;
     height: 120px;
     padding: 12px 16px;
@@ -1681,9 +1687,9 @@ color: var(--link-text-color);
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.agreement-checkbox:focus + .label-text-icon {
+.agreement-checkbox:checked + .label-text-icon {
     opacity: 1;
-}
+} 
 
 
 .label-text-agermeent {
@@ -1694,6 +1700,9 @@ color: var(--link-text-color);
 }
 
 
+
+
+
 .agreement-checkbox:checked {
     background-repeat: no-repeat;
     background: var(--hover-focus-color);
@@ -1702,7 +1711,7 @@ color: var(--link-text-color);
 }
 
 
-.ffwwf {
+.label-text-wrapper {
     position: relative;
 }
 
